@@ -32,6 +32,7 @@
 - change time() to use monotonic_clock().
 - remove unused function elapsed().
 - fix unbind sasl external mech.
+- fix sasl connection concurrancy problem.
 
 21/04/2015 autofs-5.1.1
 =======================
